Fix problem with flex in work section

--- a/src/html/work.html
+++ b/src/html/work.html
@@ -33,6 +33,8 @@
           height="390"
         />
       </div>
+    </div>
+    <div class="work__center-left-col">
       <div class="work__img-overflow">
         <div class="work__img-overlay"></div>
         <img
@@ -54,7 +56,8 @@
         />
       </div>
     </div>
-    <div class="work__center-col">
+
+    <div class="work__center-right-col">
       <div class="work__img-overflow">
         <div class="work__img-overlay"></div>
         <img
