--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,8 @@
       //= ./html/work.html
       <!-- people -->
       //= ./html/people.html
+      <!-- blog -->
+      //= ./html/blog.html
     </main>
     <!-- Сюда будет всталена ссылка на файл скриптов -->
     <!-- inject:js -->
