Add map section

--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,8 @@
       //= ./html/people.html
       <!-- blog -->
       //= ./html/blog.html
+      <!-- map -->
+      //= ./html/map.html
     </main>
     <!-- Сюда будет всталена ссылка на файл скриптов -->
     <!-- inject:js -->
