--- a/src/html/blog.html
+++ b/src/html/blog.html
@@ -1,4 +1,4 @@
-<section class="blog-section secion">
+<section class="blog-section secion" id="blog">
   <div class="container">
     <h2 class="blog-title title">
       <span class="title--italic"> Our stories </span>Latest blog
