--- a/src/html/header.html
+++ b/src/html/header.html
@@ -15,10 +15,10 @@
               <a href="#work" class="site-nav__link">work</a>
             </li>
             <li class="site-nav__item">
-              <a href="#" class="site-nav__link">blog</a>
+              <a href="#blog" class="site-nav__link">blog</a>
             </li>
             <li class="site-nav__item">
-              <a href="#" class="site-nav__link">contacts</a>
+              <a href="#contacts" class="site-nav__link">contacts</a>
             </li>
           </ul>
         </nav>
@@ -68,7 +68,7 @@
             >
           </li>
           <li class="hero-nav__item">
-            <a href="#" class="hero-nav__link"
+            <a href="#contacts" class="hero-nav__link"
               ><span class="hero-nav__link-number">04 </span>contacts</a
             >
           </li>
