--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,10 @@
       //= ./html/blog.html
       <!-- map -->
       //= ./html/map.html
+      <!-- contacts -->
+      //= ./html/contacts.html
+      <!-- footer -->
+      //= ./html/footer.html
     </main>
     <!-- Сюда будет всталена ссылка на файл скриптов -->
     <!-- inject:js -->
