--- a/src/html/about.html
+++ b/src/html/about.html
@@ -20,14 +20,15 @@
               </svg>
               <p class="about-list__text">super team</p>
             </div>
-
-            <img
-              src="images/about/layer44-min.jpg"
-              alt="keypad"
-              class="about-list__img"
-              sizes="380"
-              height="250"
-            />
+            <picture class="about-list__img">
+              <source
+                srcset="
+                  ./images/about/layer44-min.jpg,
+                  ./images/about/layer44@2x-min.jpg 2x
+                "
+              />
+              <img src="./images/about/layer44-min.jpg" alt="keyboard" />
+            </picture>
           </div>
         </a>
       </li>
@@ -40,13 +41,20 @@
               </svg>
               <p class="about-list__text">best media</p>
             </div>
-            <img
-              src="images/about/layer39-min.jpg"
-              alt="headphones"
-              class="about-list__img"
-              sizes="380"
-              height="250"
-            />
+            <picture class="about-list__img">
+              <source
+                srcset="
+                  ./images/about/layer39-min.jpg,
+                  ./images/about/layer39@2x-min.jpg 2x
+                "
+              />
+              <img
+                src="images/about/layer39-min.jpg"
+                alt="headphones"
+                sizes="380"
+                height="250"
+              />
+            </picture>
           </div>
         </a>
       </li>
@@ -59,13 +67,20 @@
               </svg>
               <p class="about-list__text">greatest results</p>
             </div>
-            <img
-              src="images/about/layer41-min.jpg"
-              alt="work table"
-              class="about-list__img"
-              sizes="380"
-              height="250"
-            />
+            <picture class="about-list__img">
+              <source
+                srcset="
+                  ./images/about/layer41-min.jpg,
+                  ./images/about/layer41@2x-min.jpg 2x
+                "
+              />
+              <img
+                src="./images/about/layer41-min.jpg"
+                alt="work table"
+                sizes="380"
+                height="250"
+              />
+            </picture>
           </div>
         </a>
       </li>
