--- a/src/html/contacts.html
+++ b/src/html/contacts.html
@@ -137,75 +137,93 @@
     </div>
     <div class="instagramm__block">
       <h3 class="blogs__title">instagram</h3>
-      <a href="#" class="instagram__link">View more photos</a>
+
       <div class="instagram__img-block">
-        <img
-          src="./images/contacts/photos-7884M86ovdhbiWKi-min.jpg"
-          alt=""
-          class="instagram__img"
-          width="88"
-          height="88"
-        />
-        <img
-          src="./images/contacts/photos-7884MJE3ABUJPTO1-min.jpg"
-          alt=""
-          class="instagram__img"
-          width="88"
-          height="88"
-        />
+        <div class="img__wrap">
+          <img
+            src="./images/contacts/photos-7884M86ovdhbiWKi-min.jpg"
+            alt=""
+            class="instagram__img"
+            width="88"
+            height="88"
+          />
+        </div>
+        <div class="img__wrap">
+          <img
+            src="./images/contacts/photos-7884MJE3ABUJPTO1-min.jpg"
+            alt=""
+            class="instagram__img"
+            width="88"
+            height="88"
+          />
+        </div>
+        <div class="img__wrap">
+          <img
+            src="./images/contacts/photos-7884rRdzNWx35XGc-min.jpg"
+            alt=""
+            class="instagram__img"
+            width="88"
+            height="88"
+          />
+        </div>
+        <div class="img__wrap">
+          <img
+            src="./images/contacts/photos-7884W4HBOgfC6WDb-min.jpg"
+            alt=""
+            class="instagram__img"
+            width="88"
+            height="88"
+          />
+        </div>
+        <div class="img__wrap">
+          <img
+            src="./images/contacts/photos-7884qnJlwaL4TA8x-min.jpg"
+            alt=""
+            class="instagram__img"
+            width="88"
+            height="88"
+          />
+        </div>
+        <div class="img__wrap">
+          <img
+            src="./images/contacts/photos-7884MBqau4DkSE9K-min.jpg"
+            alt=""
+            class="instagram__img"
+            width="88"
+            height="88"
+          />
+        </div>
 
-        <img
-          src="./images/contacts/photos-7884rRdzNWx35XGc-min.jpg"
-          alt=""
-          class="instagram__img"
-          width="88"
-          height="88"
-        />
-        <img
-          src="./images/contacts/photos-7884W4HBOgfC6WDb-min.jpg"
-          alt=""
-          class="instagram__img"
-          width="88"
-          height="88"
-        />
-        <img
-          src="./images/contacts/photos-7884qnJlwaL4TA8x-min.jpg"
-          alt=""
-          class="instagram__img"
-          width="88"
-          height="88"
-        />
-        <img
-          src="./images/contacts/photos-7884MBqau4DkSE9K-min.jpg"
-          alt=""
-          class="instagram__img"
-          width="88"
-          height="88"
-        />
+        <div class="img__wrap">
+          <img
+            src="./images/contacts/photos-7884nwL7ruku3rhJ-min.jpg"
+            alt=""
+            class="instagram__img"
+            width="88"
+            height="88"
+          />
+        </div>
 
-        <img
-          src="./images/contacts/photos-7884nwL7ruku3rhJ-min.jpg"
-          alt=""
-          class="instagram__img"
-          width="88"
-          height="88"
-        />
-
-        <img
-          src="./images/contacts/1/photos-78841zcS1oLCjBr4-min.jpg"
-          alt=""
-          class="instagram__img"
-          width="88"
-          height="88"
-        />
-        <img
-          src="./images/contacts/1/photos-78842fGoMmtuD5Z9-min.jpg"
-          alt=""
-          class="instagram__img"
-          width="88"
-          height="88"
-        />
+        <div class="img__wrap">
+          <img
+            src="./images/contacts/1/photos-78841zcS1oLCjBr4-min.jpg"
+            alt=""
+            class="instagram__img"
+            width="88"
+            height="88"
+          />
+        </div>
+        <div class="img__wrap">
+          <img
+            src="./images/contacts/1/photos-78842fGoMmtuD5Z9-min.jpg"
+            alt=""
+            class="instagram__img"
+            width="88"
+            height="88"
+          />
+        </div>
       </div>
+      <a href="#" class="instagram__link">View more photos</a>
     </div>
   </div>
 </section>
