--- a/src/html/team.html
+++ b/src/html/team.html
@@ -53,8 +53,8 @@
           <img
             class="team__item-img"
             srcset="
-              ./images/team/layer16-min.jpg    380w,
-              ./images/team/layer16@2x-min.jpg 760w
+              ./images/team/layer16-min.jpg,
+              ./images/team/layer16@2x-min.jpg 2x
             "
             src="./images/team/layer16-min.jpg"
             sizes="380px"
@@ -108,8 +108,8 @@
           <img
             class="team__item-img"
             srcset="
-              ./images/team/layer19-min.jpg    380w,
-              ./images/team/layer19@2x-min.jpg 760w
+              ./images/team/layer19-min.jpg,
+              ./images/team/layer19@2x-min.jpg 2x
             "
             src="./images/team/layer19-min.jpg"
             sizes="380px"
@@ -162,8 +162,8 @@
           <img
             class="team__item-img"
             srcset="
-              ./images/team/layer18-min.jpg    380w,
-              ./images/team/layer18@2x-min.jpg 760w
+              ./images/team/layer18-min.jpg,
+              ./images/team/layer18@2x-min.jpg 2x
             "
             src="./images/team/layer18-min.jpg"
             sizes="380px"
