--- a/src/html/blog.html
+++ b/src/html/blog.html
@@ -26,11 +26,11 @@
 
         <div class="blog__icon-wrapper">
           <svg class="blog__icon" width="20" height="12">
-            <use href="../images/icons/sprite/sprite.svg#view"></use>
+            <use href="./images/icons/sprite/sprite.svg#view"></use>
           </svg>
           <span class="blog__icon-numb">542</span>
           <svg class="blog__icon" width="17" height="15">
-            <use href="../images/icons/sprite/sprite.svg#speach-bubble"></use>
+            <use href="./images/icons/sprite/sprite.svg#speach-bubble"></use>
           </svg>
           <span class="blog__icon-numb">17</span>
         </div>
