fix sizes in about, team section

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -48,12 +48,7 @@
                   ./images/about/layer39@2x-min.jpg 2x
                 "
               />
-              <img
-                src="images/about/layer39-min.jpg"
-                alt="headphones"
-                sizes="380"
-                height="250"
-              />
+              <img src="images/about/layer39-min.jpg" alt="headphones" />
             </picture>
           </div>
         </a>
@@ -74,12 +69,7 @@
                   ./images/about/layer41@2x-min.jpg 2x
                 "
               />
-              <img
-                src="./images/about/layer41-min.jpg"
-                alt="work table"
-                sizes="380"
-                height="250"
-              />
+              <img src="./images/about/layer41-min.jpg" alt="work table" />
             </picture>
           </div>
         </a>
