--- a/src/html/team.html
+++ b/src/html/team.html
@@ -57,7 +57,7 @@
               ./images/team/layer16@2x-min.jpg 2x
             "
             src="./images/team/layer16-min.jpg"
-            sizes="380px"
+            width="380"
             alt="man image"
             height="470"
           />
@@ -112,7 +112,7 @@
               ./images/team/layer19@2x-min.jpg 2x
             "
             src="./images/team/layer19-min.jpg"
-            sizes="380px"
+            width="380"
             alt="man image"
             height="470"
           />
@@ -166,7 +166,7 @@
               ./images/team/layer18@2x-min.jpg 2x
             "
             src="./images/team/layer18-min.jpg"
-            sizes="380px"
+            width="380"
             alt="man image"
             height="470"
           />
