fix logos sizes

--- a/src/html/logos.html
+++ b/src/html/logos.html
@@ -5,7 +5,7 @@
       <img
         src="./images/logos/layer25-min.png"
         alt="logos"
-        sizes="1180"
+        width="1180"
         height="127"
       />
     </div>
